updated loading screen, and on mobile load there is no text-slider.... bug issues do happen if page is resized though (text-slider wont be removed)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -661,3 +661,14 @@ a.header-down-arrow {
 		}
 	}
 }
+
+// Page loader
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
